[project]
name = "mle-prac"
version = "0.1.0"
description = "Machine Learning Engineering Practice"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "nbformat>=5.9.0",
    "ipykernel>=6.0.0"
]
[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
