[project]
name = "mle-prac"
version = "0.1.0"
description = "Machine Learning Engineering Practice"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "nbformat>=5.9.0",
    "ipykernel>=6.0.0"
]
[tool.setuptools]
py-modules = [
    "adult_census_analysis",
    "auto_mpg_regression",
    "california_housing_pipeline",
    "classification_analysis",
    "clustering_analysis",
    "pca_mnist_analysis",
    "svm_comparison_analysis",
    "titanic_analysis",
    "titanic_rf_analysis",
    "visualization_analysis"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
